| Summary: | ASTERISK-26765: res_resolver_unbound: FRACK! Excessive ref count trap tripped. | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |
| Date Opened: | 2017-02-01 17:21:04.000-0600 | Date Closed: | 2017-02-02 08:46:47.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | GIT | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | [~rmudgett]'s trap caught an issue in resolver_unbound...
{noformat} [Feb 1 15:17:46] ERROR[21675]: res_resolver_unbound.c:303 unbound_resolver_resolve: Excessive refcount 100000 reached on ao2 object 0x363ed80 [Feb 1 15:17:46] ERROR[21675]: res_resolver_unbound.c:303 unbound_resolver_resolve: FRACK!, Failed assertion Excessive refcount 100000 reached on ao2 object 0x363ed80 (0) [Feb 1 15:17:46] Got 24 backtrace records [Feb 1 15:17:46] #0: [0x45cf9e] main/astobj2.c:540 __ao2_ref() (0x45ce00+19E) [Feb 1 15:17:46] #1: [0x7f09fa55fc2f] res/res_resolver_unbound.c:303 unbound_resolver_resolve() [Feb 1 15:17:46] #2: [0x500dc4] main/dns_query_set.c:191 ast_dns_query_set_resolve_async() (0x500ce0+E4) [Feb 1 15:17:46] #3: [0x7f0a18ecc271] res_pjsip/pjsip_resolver.c:616 sip_resolve() [Feb 1 15:17:46] #4: [0x7f0a473a0dc8] pjsip/sip_resolve.c:490 pjsip_resolve() (0x7f0a473a0da0+28) [Feb 1 15:17:46] #5: [0x7f0a4739efff] pjsip/sip_util.c:1396 pjsip_endpt_send_request_stateless() (0x7f0a4739ef20+DF) [Feb 1 15:17:46] #6: [0x7f0a473b2b18] pjsip/sip_transaction.c:2169 tsx_send_msg() [Feb 1 15:17:46] #7: [0x7f0a473b3537] pjsip/sip_transaction.c:2398 tsx_on_state_null() [Feb 1 15:17:46] #8: [0x7f0a473b6237] pjsip/sip_transaction.c:1751 pjsip_tsx_send_msg() (0x7f0a473b61e0+57) [Feb 1 15:17:46] #9: [0x7f0a473b66ef] pjsip/sip_util_statefull.c:118 pjsip_endpt_send_request() (0x7f0a473b6640+AF) [Feb 1 15:17:46] #10: [0x7f0a18ec1924] res/res_pjsip.c:3598 endpt_send_request() [Feb 1 15:17:46] #11: [0x7f0a18ec3d1a] res/res_pjsip.c:3799 ast_sip_send_out_of_dialog_request() (0x7f0a18ec3b60+1BA) [Feb 1 15:17:46] #12: [0x7f0a18ec7dcc] res_pjsip/pjsip_options.c:434 qualify_contact() [Feb 1 15:17:46] #13: [0x7f0a18ec80f3] res_pjsip/pjsip_options.c:510 qualify_contact_task() [Feb 1 15:17:46] #14: [0x5e6f7e] main/taskprocessor.c:332 tps_task_free() (0x5e6ec0+BE) [Feb 1 15:17:46] #15: [0x5ee8b0] main/threadpool.c:1322 execute_tasks() [Feb 1 15:17:46] #16: [0x5e6f7e] main/taskprocessor.c:332 tps_task_free() (0x5e6ec0+BE) [Feb 1 15:17:46] #17: [0x5eed58] main/threadpool.c:1106 worker_active() [Feb 1 15:17:46] #18: [0x5f944a] main/utils.c:1232 dummy_start() {noformat} This is current v14 branch of a few days ago. Leak happens for each DNS resolution query. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2017-02-02 08:46:48.303-0600 Change 4866 merged by zuul: res_resolver_unbound.c: Fix frequent ref leak caught by excessive ref trap. [https://gerrit.asterisk.org/4866|https://gerrit.asterisk.org/4866] By: Friendly Automation (friendly-automation) 2017-02-02 09:01:43.977-0600 Change 4867 merged by George Joseph: res_resolver_unbound.c: Fix frequent ref leak caught by excessive ref trap. [https://gerrit.asterisk.org/4867|https://gerrit.asterisk.org/4867] | ||