res_resolver_unbound.c: Fix frequent ref leak caught by excessive ref trap.

ASTERISK-26765

Change-Id: I27eb97df7f8d7e624b0b9a61c0fcee4718c86d8d